# volume_control

./: .gitignore  vim_mode
code/: CMakeLists.txt  build.sh  document
code/openocd/: flash.cfg  ocd.sh
code/src/: defines.c  defines.h  hamming.c  hamming.h  keymap.h  main.c  matrix.c  matrix.h  monitor_keys.c  monitor_keys.h  monitor_matrix.c  monitor_matrix.h  pins_left.h  process_input.c  process_input.h  send_over_hid.c  send_over_hid.h  trrs.c  trrs.h
code/src/tinyusb/: hid.c  hid.h  tusb_config.h  usb.c  usb.h  usb_descriptors.c  usb_descriptors.h
code/tools/: reset_usb.sh
